[workspace]
members = ["crates/*"]

[workspace.dependencies]
color-eyre = "0.6.2"
peg = "0.8.1"
itertools = "0.10.5"
utilities = {version = "0.1.0", path = "crates/utilities"}
array2d = "0.3.0"
nom = "7.1.2"
num-bigint = "0.4.3"
num-integer = "0.1.45"
num-traits = "0.2.15"
rayon = "1.6.1"
once_cell = "1.17.0"

nom-supreme = "0.8.0"
nom_locate = "4.1.0"
miette = {version = "5.5.0", features = ["fancy"]}
thiserror = "1.0.38"