[package]
name = "day11"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nom.workspace = true
utilities.workspace = true
num-bigint.workspace = true
num-traits.workspace = true
num-integer.workspace = true