[package]
name = "utilities"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
itertools.workspace = true
nom.workspace = true
num-bigint.workspace = true
num-integer.workspace = true
num-traits.workspace = true
nom-supreme.workspace = true
nom_locate.workspace = true
miette.workspace = true
thiserror.workspace = true